# MKF

./: CMakeLists.txt  README.md  kinematic_vehicle_scenario.cpp  main.cpp  main_non_gaussian.cpp  mobile_robot_scenario.cpp  normal_vehicle_scenario.cpp  paper_example.cpp
data/: data_analyzer.cpp  data_preprocessor.cpp
include/: matplotlibcpp.h  utilities.h
include/distribution/: base_distribution.h  exponential_distribution.h  four_dimensional_normal_distribution.h  normal_distribution.h  three_dimensional_normal_distribution.h  two_dimensional_normal_distribution.h  uniform_distribution.h
include/filter/: kinematic_vehicle_ekf.h  kinematic_vehicle_ukf.h  kinematic_vehilce_nkf.h  mobile_robot_ekf.h  mobile_robot_nkf.h  mobile_robot_ukf.h  normal_vehicle_ekf.h  normal_vehicle_nkf.h  normal_vehicle_ukf.h  paper_example_2d_ukf.h  paper_example_3d_ukf.h  simple_vehicle_ekf.h  simple_vehicle_nkf.h  simple_vehicle_ukf.h
include/model/: kinematic_vehicle_model.h  mobile_robot_model.h  normal_vehicle_model.h  simple_vehicle_model.h
include/scenario/: kinematic_vehicle_scenario.h  mobile_robot_scenario.h  simple_vehicle_scenario.h
result/data/: kinematic_vehicle_gaussian.csv  kinematic_vehicle_non_gaussian.csv  mobile_robot_gaussian.csv  mobile_robot_non_gaussian.csv  simple_vehicle_gaussian.csv  simple_vehicle_non_gaussian.csv
result/data/robot1/: simple_vehicle_gaussian.csv
result/data/robot2/: simple_vehicle_gaussian.csv  simple_vehicle_non_gaussian.csv
result/picture/: distribution_approximation.eps  kinematic_vehicle_gaussian.eps  kinematic_vehicle_gaussian_trajectory.eps  kinematic_vehicle_non_gaussian.eps  kinematic_vehicle_non_gaussian_trajectory.eps  simple_vehicle_gaussian.eps  simple_vehicle_gaussian_trajectory.eps  simple_vehicle_non_gaussian.eps  simple_vehicle_non_gaussian_position_progression.eps  simple_vehicle_non_gaussian_trajectory.eps  simple_vehicle_non_gaussian_yaw_progression.eps
result/picture/robot1/: simple_vehicle_gaussian.eps  simple_vehicle_gaussian_trajectory.eps  simple_vehicle_non_gaussian.eps  simple_vehicle_non_gaussian_position_progression.eps  simple_vehicle_non_gaussian_trajectory.eps  simple_vehicle_non_gaussian_yaw_progression.eps
scripts/montecarlo/: independent_normal_2d_montecarlo.py  independent_normal_3d_montecarlo.py  mobile_robot_update_montecarlo.py  normal_2d_montecarlo.py  normal_3d_montecarlo.py  normal_vehicle_montecarlo.py  paper_example.py  simple_vehicle_model_montecarlo.py  update_montecarlo.py
scripts/montecarlo/kinematic_vehicle_model/: kinematic_model_montecarlo.py  kinematic_vehicle_update_montecarlo.py
scripts/visualizer/: distribution_approximation.py  introduction.py  mobile_robot_visualizer.py  simple_vehicle_visualizer.py  utias_simulation_visualizer.py  visualize_progression.py
src/: utilities.cpp
src/distribution/: base_distribution.cpp  exponential_distribution.cpp  four_dimensional_normal_distribution.cpp  normal_distribution.cpp  three_dimensional_normal_distribution.cpp  two_dimensional_normal_distribution.cpp  uniform_distribution.cpp
src/filter/: kinematic_vehicle_ekf.cpp  kinematic_vehicle_nkf.cpp  kinematic_vehicle_ukf.cpp  mobile_robot_ekf.cpp  mobile_robot_nkf.cpp  mobile_robot_ukf.cpp  normal_vehicle_ekf.cpp  normal_vehicle_nkf.cpp  normal_vehicle_ukf.cpp  paper_example_2d_ukf.cpp  paper_example_3d_ukf.cpp  simple_vehicle_ekf.cpp  simple_vehicle_nkf.cpp  simple_vehicle_ukf.cpp
src/model/: kinematic_vehicle_model.cpp  mobile_robot_model.cpp  normal_vehicle_model.cpp  simple_vehicle_model.cpp
test/distribution/: test_exponential_distribution.cpp  test_normal_distribution.cpp  test_three_dimensional_normal_distribution.cpp  test_two_dimensional_normal_distribution.cpp  test_uniform_distribution.cpp
test/filter/: test_simple_vehicle_nkf.cpp
test/model/: test_kinematic_vehicle_model.cpp  test_mobile_robot_model.cpp  test_simple_vehicle_model.cpp
